list items added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 <body>
     <h2>secondary header</h2>
     <p>sub text..</p>
+    <ul>
+        <li><h3>list items!</h3></li>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+    </ul>
 </body>
 </html>
