--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,10 @@
         <li>item 2</li>
         <li>item 3</li>
     </ul>
+<table>
+    <tr>
+        <td>first cell</td>
+    </tr>
+</table>
 </body>
 </html>
